corrects layout issues in mobile view, esp. in safari

--- a/src/css/elements/_typography.css
+++ b/src/css/elements/_typography.css
@@ -90,7 +90,7 @@ img {
   word-break: normal;
 }
 
-@media screen and (width <= 767px) {
+@media screen and (max-width: 767px) {
   img {
     max-width: 100%;
   }
