--- a/src/modules/products-cta.module/module.css
+++ b/src/modules/products-cta.module/module.css
@@ -58,10 +58,11 @@
 
   .products-cta__item {
     padding: 0;
-    flex-direction: column;
+    flex-direction: column !important;
   }
 
   .products-cta__text-section {
+    align-items: center;
     padding: 0.75rem;
     width: 100%;
   }
@@ -69,6 +70,10 @@
   .products-cta__text-section > h3 {
     font-size: 22px;
     line-height: 30px;
+  }
+
+  .products-cta__text-section p {
+    margin: 0;
   }
 
   .products-cta__media-section {
